tests/code/pages/errors/unsupported-keyword.tht



protected fun foobar {

}


// switch {

// }

// while true {
//     // ...
// }


